tolk-tester/tests/invalid-syntax/err-3617.tolk
fun main() {
    return 0b;
}

/**
@compilation_should_fail
@stderr invalid binary integer
 */
